added modal for COVID-19 updates

--- a/about.html
+++ b/about.html
@@ -140,11 +140,53 @@
                                 -->
                                 <p class="lead text-white">Applications for the 2020 program are now open, and they close on July 19th.</p>
                                 <p class="lead text-white">The program begins Wednesday, August 26th and ends Saturday, August 29th.</p>
-                                <div class="btn-wrapper">
-                                    <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
-                                        <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
-                                        <span class="btn-inner--text">Apply Now</span>
-                                    </a>
+
+
+                                <div class="btn-toolbar mt-5" role="group">
+                                    <div class="btn-wrapper">
+                                        <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
+                                            <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
+                                            <span class="btn-inner--text">Apply Now</span>
+                                        </a>
+                                    </div>
+
+
+                                    <!-- COVID Update -->
+                                    <!-- Button trigger modal -->
+                                    <div class="btn-wrapper">
+                                        <button type="button" class="btn btn-danger btn-icon mb-3 mb-sm-0" data-toggle="modal" data-target="#covidModalCenter">
+                                            <span class="btn-inner--icon"><i class="fa fa-exclamation-triangle"></i></span>
+                                            <span class="btn-inner--text">COVID-19 Update</span>
+                                        </button>
+                                    </div>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="covidModalCenter" tabindex="-1" role="dialog" aria-labelledby="covidModalCenterTitle" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="covidModalLongTitle">COVID-19 Update + Changes</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p class="ml-1">Hello future Spartan!</p>
+                                                    <p>On June 29th, Dr. Amanda Idema, Assistant Dean of Undergraduate Studies of the College of Engineering, sent out an email with the statement:</p>
+                                                    <blockquote class="blockquote">
+                                                        <p class="pl-3"><i><q>When we return in the fall, RSOs will be asked to conduct activities remotely.</q></i></p>
+                                                    </blockquote>
+                                                    <p>As Leadership Advantage is an RSO (registered student organization) under the College of Engineering, unfortunately we will not be holding LA as we would normally this fall.</p>
+                                                    <p>The Executive Board is currently in the process of creating a virtual plan that would still allow incoming students to be involved and to be provided resources for them at MSU. More information about this will be coming soon. Make sure to check your emails!</p>
+                                                    <p>In the mean time, we still encourage you to apply! The original <b>cost</b> of the program has been <b>waived</b>, so there's no reason not to!</p>
+                                                    <p>If you have any questions, don't hesitate to reach out by <a href="mailto: leadershipadvantagemsu@gmail.com">our email</a>. We understand these are unprecedented times, the most important thing is staying safe! Thank you!</p>
+                                                    <p class="mb-0 pl-2">-Leadership Advantage Team</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
