updated modal and deleted about nav dropdown

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-                        <li class="nav-item dropdown">
+                        <li class="nav-item">
                             <a href="about.html" class="nav-link">
                                 <i class="fa fa-info-circle d-lg-none"></i>
                                 <span class="nav-link-inner--text">About</span>
@@ -180,9 +180,9 @@
                                                     </blockquote>
                                                     <p>As Leadership Advantage is an RSO (registered student organization) under the College of Engineering, unfortunately we will not be holding LA as we would normally this fall.</p>
                                                     <p>The Executive Board is currently in the process of creating a virtual plan that would still allow incoming students to be involved and to be provided resources for them at MSU. More information about this will be coming soon. Make sure to check your emails!</p>
-                                                    <p>In the mean time, we still encourage you to apply! The original <b>cost</b> of the program has been <b>waived</b>, so there's no reason not to!</p>
+                                                    <p>In the mean time, we still encourage you to <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank">apply</a>! The original <b>cost</b> of the program has been <b>waived</b>, so there's no reason not to!</p>
                                                     <p>If you have any questions, don't hesitate to reach out by <a href="mailto: leadershipadvantagemsu@gmail.com">our email</a>. We understand these are unprecedented times, the most important thing is staying safe! Thank you!</p>
-                                                    <p class="mb-0 pl-2">-Leadership Advantage Team</p>
+                                                    <p class="mb-0 pl-2">- Leadership Advantage Team</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
