--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-                        <li class="nav-item dropdown">
+                        <li class="nav-item">
                             <a href="about.html" class="nav-link">
                                 <i class="fa fa-info-circle d-lg-none"></i>
                                 <span class="nav-link-inner--text">About</span>
@@ -129,12 +129,11 @@
                     <span></span>
                     <span></span>
                 </div>
-                <div class="container py-lg-md d-flex">
+                <div class="container pt-md pb-sm d-flex">
                     <div class="col px-0">
                         <div class="row">
                             <div class="col-lg-6">
-                                <h1 class="display-3  text-white">The Executive Board
-                                </h1>
+                                <h1 class="display-3  text-white">The Executive Board</h1>
                             </div>
                         </div>
                     </div>
