--- a/about.html
+++ b/about.html
@@ -138,8 +138,8 @@
                                 <p class="lead text-white">Applications for the 2020 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
-                                <p class="lead text-white">Applications for the 2020 program are now open, and they close on July 19th.</p>
-                                <p class="lead text-white">The program begins Wednesday, August 26th and ends Saturday, August 29th.</p>
+                                <p class="lead text-white">Applications for the 2020 (virtual) program are now open.</p>
+                                <p class="lead text-white">Updated program information due to COVID-19 restrictions and regulations can be found by email as well as by clicking the button below.</p>
 
 
                                 <div class="btn-toolbar mt-5" role="group">
@@ -161,33 +161,32 @@
                                     </div>
                                     <!-- Modal -->
                                     <div class="modal fade" id="covidModalCenter" tabindex="-1" role="dialog" aria-labelledby="covidModalCenterTitle" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" id="covidModalLongTitle">COVID-19 Update + Changes</h5>
+                                                    <h5 class="modal-title" id="covidModalLongTitle">Leadership Advantage Update</h5>
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
                                                     </button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p class="ml-1">Hello future Spartan!</p>
-                                                    <p>On June 29th, Dr. Amanda Idema, Assistant Dean of Undergraduate Studies of the College of Engineering, sent out an email with the statement:</p>
-                                                    <blockquote class="blockquote">
-                                                        <p class="pl-3"><i><q>When we return in the fall, RSOs will be asked to conduct activities remotely.</q></i></p>
-                                                    </blockquote>
-                                                    <p>As Leadership Advantage is an RSO (registered student organization) under the College of Engineering, unfortunately we will not be holding LA as we would normally this fall.</p>
-                                                    <p>The Executive Board is currently in the process of creating a virtual plan that would still allow incoming students to be involved and to be provided resources for them at MSU. More information about this will be coming soon. Make sure to check your emails!</p>
-                                                    <p>In the mean time, we still encourage you to <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank">apply</a>! The original <b>cost</b> of the program has been <b>waived</b>, so there's no reason not to!</p>
-                                                    <p>If you have any questions, don't hesitate to reach out by <a href="mailto: leadershipadvantagemsu@gmail.com">our email</a>. We understand these are unprecedented times, the most important thing is staying safe! Thank you!</p>
-                                                    <p class="mb-0 pl-2">- Leadership Advantage Team</p>
+                                                    <p class="pl-1">Hello future Spartan!</p>
+                                                    <p>In the past few weeks, the executive board has been working hard to comply with the new regulations from the state and the university. As you may have heard, the university is now highly encouraging that registered student organizations conduct all activities remotely. Since your safety is our top priority, <b>we have made the difficult decision to cancel the in-person part of this program</b>. However, we would still like to provide some guidance and resources for the upcoming school year that you would've received in a normal circumstance.</p>
+                                                    <p>We are holding a <b>free Zoom webinar on August 26th at 12pm EST</b> to give incoming engineers advice from current students on topics including how to succeed at MSU, tips for online classes, and a Q&A session for each major. If you are interested in attending, please fill out the Google Form by clicking on the button below. We expect the event to be 2-3 hours long and we will communicate an updated agenda and a link to join as the event gets closer.</p>
+                                                    <p>Thank you for your understanding during these difficult times, if you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
+                                                    <p>We hope to see you (virtually) soon!</p>
+                                                    <p class="mb-0 pl-2">- Leadership Advantage Executive Board</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank">Virtual Sign Up</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
