Updated About page's header with information.

--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
                                 <p class="lead text-white">Applications for the 2020 (virtual) program are now open.</p>
-                                <p class="lead text-white">Updated program information due to COVID-19 restrictions and regulations can be found by email as well as by clicking the button below.</p>
+                                <p class="lead text-white">Updated program information due to new regulations can be found by clicking the button below.</p>
 
 
                                 <div class="btn-toolbar mt-5" role="group">
