updated Previous Years carousel size + shape

--- a/about.html
+++ b/about.html
@@ -263,7 +263,7 @@
                         <h1>Previous Years</h1>
                     </div>
                     <div class="col-lg-6 mb-lg-auto">
-                        <div class="rounded shadow-lg overflow-hidden transform-perspective-right">
+                        <div class="shadow-lg overflow-hidden">
                             <div id="carousel_example" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carousel_example" data-slide-to="0" class="active"></li>
