deleted dropdown classes from navbar and added Instagram link to navbar

--- a/index.html
+++ b/index.html
@@ -64,39 +64,17 @@
                                 <i class="fa fa-info-circle d-lg-none"></i>
                                 <span class="nav-link-inner--text">About</span>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-xl">
-                                <div class="dropdown-menu-inner">
-                                    <a href="about.html" class="media d-flex align-items-center" id="nav-what-is">
-                                        <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
-                                            <i class="fa fa-question-circle-o"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h6 class="heading text-primary mb-md-1">What is LA?</h6>
-                                        </div>
-                                    </a>
-                                    <a href="about.html" class="media d-flex align-items-center" id="nav-included">
-                                        <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                                            <i class="fa fa-check-circle-o"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h6 class="heading text-primary mb-md-1">What's Included?</h6>
-                                        </div>
-                                    </a>
-                                    <a href="about.html" class="media d-flex align-items-center" id="nav-apply">
-                                        <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                                            <i class="fa fa-file-text"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h5 class="heading text-warning mb-md-1">How do I apply?</h5>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item">
                             <a href="team.html" class="nav-link" id="nav-team">
                                 <i class="fa fa-users d-lg-none"></i>
                                 <span class="nav-link-inner--text">The Team</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
+                                <i class="fa fa-instagram d-lg"></i>
+                                <span class="nav-link-inner--text ml-0">Instagram</span>
                             </a>
                         </li>
                     </ul>
