--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         </li>
                         <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
-                                <i class="fa fa-instagram d-lg"></i>
-                                <span class="nav-link-inner--text ml-0">Instagram</span>
+                                <i class="fa fa-instagram d-lg mr-0"></i>
+                                <span class="nav-link-inner--text">Instagram</span>
                             </a>
                         </li>
                     </ul>
