added group photo to home page, rounded images

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="container py-lg-md d-flex">
                     <div class="col px-0">
-                        <div class="row">
+                        <div class="row d-flex flex-wrap align-items-center">
                             <div class="col-lg-6">
                                 <h1 class="display-3  text-white">Leadership Advantage 2020
                                     <span>Michigan State University</span>
@@ -169,6 +169,9 @@
 
 
                             </div>
+                            <div class="col-lg-6 mt-5">
+                                <img src="/assets/img/pictures/group-pic-2018.jpg" alt="Group Picture 2018" class="img-fluid shadow-lg rounded">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -227,7 +230,7 @@
             <div class="container">
                 <div class="row row-grid align-items-center">
                     <div class="col-md-6 order-md-2">
-                        <img src="assets/img/theme/promo-1.png" class="img-fluid floating shadow-lg">
+                        <img src="assets/img/theme/promo-1.png" class="img-fluid floating shadow-lg rounded">
                     </div>
                     <div class="col-md-6 order-md-1">
                         <div class="pr-md-5">
@@ -273,7 +276,7 @@
             <div class="container">
                 <div class="row row-grid align-items-center">
                     <div class="col-md-6 order-md-2">
-                        <img src="assets/img/pictures/volleyball.jpg" class="img-fluid floating shadow-lg">
+                        <img src="assets/img/pictures/volleyball.jpg" class="img-fluid floating shadow-lg rounded">
                     </div>
                     <div class="col-md-6 order-md-1">
                         <div class="pr-md-5">
