increased instagram icon size

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
-                                <i class="fa fa-instagram d-lg mr-0"></i>
+                                <i class="fa fa-instagram fa-lg d-lg mr-0"></i>
                                 <span class="nav-link-inner--text">Instagram</span>
                             </a>
                         </li>
