--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Launch Your Engineering Career at MSU's leadership seminar designed specifically for students interested in engineering.">
     <meta name="theme-color" content="#18453b">
 
-    <title>Leadership Advantage - About</title>
+    <title>About | Leadership Advantage</title>
     <!-- Favicon -->
     <link href="assets/img/brand/favicon.ico" rel="icon" type="image/png">
     <!-- Fonts -->
