added logo to About page

--- a/about.html
+++ b/about.html
@@ -166,6 +166,9 @@
 
 
                             </div>
+                            <div class="col-lg-6 mt-5">
+                                <img src="/assets/img/brand/lalogo.jpg" alt="LA Logo" class="img-fluid shadow-lg rounded">
+                            </div>
                         </div>
                     </div>
                 </div>
