--- a/team.html
+++ b/team.html
@@ -129,6 +129,7 @@
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
+                        <!--
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
@@ -141,12 +142,13 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
                                     </div>
 
-                                    <!-- <div class="border-top">
+                                    <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        -->
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
