fixed eboard card height

--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
                     <div class="row row-grid">
                         <!--
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/lemieux.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
                                     <div class="text-center mt-3">
@@ -150,7 +150,7 @@
                         </div>
                         -->
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/bangtson.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangston's Photo">
                                     <div class="text-center mt-3">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/mariah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
                                     <div class="text-center mt-3">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/mears.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
                                     <div class="text-center mt-3">
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/arnoldt.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Arnoldt's Photo">
                                     <div class="text-center mt-3">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
                                     <div class="text-center mt-3">
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
+                            <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/guertin.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ben Guertin's Photo">
                                     <div class="text-center mt-3">
