--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
