updated about info to say apps are closed

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                                 <p class="lead text-white">Applications for the 2020 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
-                                <p class="lead text-white">Applications for the 2020 (virtual) program are now open.</p>
+                                <p class="lead text-white">Applications for the 2020 program are now closed.</p>
                                 <p class="lead text-white">Updated program information due to new regulations can be found by clicking the button below.</p>
 
 
