--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                                 <span class="nav-link-inner--text">Instagram</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="https://msu.campuslabs.com/engage/organization/leadershipadvantage" target="_blank" class="nav-link" id="nav-involve">
+                                <i class="fa fa-external-link fa-lg d-lg mr-0"></i>
+                                <span class="nav-link-inner--text">Involve@State</span>
+                            </a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
