--- a/team.html
+++ b/team.html
@@ -176,13 +176,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/mariah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
+                                    <img src="assets/img/team/henry.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Mariah Seybold</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Davison, MI</div>
+                                        <h3 class="text-primary">Henry Xu</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Novi, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Fifth Year Senior, Chemical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2022</div>
                                     </div>
 
                                     <!-- <div class="border-top">
