--- a/team.html
+++ b/team.html
@@ -158,13 +158,31 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/bangtson.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangston's Photo">
+                                    <img src="assets/img/team/connor.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangston's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Matt Bangtson</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Edwardsburg, MI</div>
+                                        <h3 class="text-primary">Connor Mears</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Linden, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Supply Chain Management</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -194,13 +212,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/mears.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Connor Mears</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Linden, MI</div>
+                                        <h3 class="text-primary">Tommy Erickson</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -212,13 +230,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/arnoldt.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Arnoldt's Photo">
+                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Arnoldt's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Sean Arnoldt</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Chicago, IL</div>
+                                        <h3 class="text-primary">Grant Wills</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Engineering </div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Finance</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>April 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -230,13 +248,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
+                                    <img src="assets/img/team/akhil.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Joe Lietaert</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Lambertville, MI</div>
+                                        <h3 class="text-primary">Akhil Tatineni</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Packaging</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Spring 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -248,13 +266,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/guertin.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ben Guertin's Photo">
+                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ben Guertin's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Ben Guertin</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Ellicott City, MD</div>
+                                        <h3 class="text-primary">Aliza Opolka</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2020</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
