--- a/team.html
+++ b/team.html
@@ -135,30 +135,30 @@
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
-                        <!--
+
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/lemieux.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
+                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Sean Lemieux</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Clarkston, MI</div>
+                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering </div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
-                        -->
+
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/connor.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangston's Photo">
+                                    <img src="assets/img/team/connor.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Connor Mears</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Linden, MI</div>
@@ -176,7 +176,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
+                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Mikayla Norton</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
@@ -194,7 +194,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/henry.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
+                                    <img src="assets/img/team/henry.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Henry Xu</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Novi, MI</div>
@@ -212,7 +212,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Tommy Erickson</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
@@ -230,7 +230,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Arnoldt's Photo">
+                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Grant Wills's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Grant Wills</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
@@ -248,7 +248,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/akhil.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
+                                    <img src="assets/img/team/akhil.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Akhil Tatineni's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Akhil Tatineni</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
@@ -266,7 +266,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ben Guertin's Photo">
+                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Aliza Opolka's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Aliza Opolka</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
