--- a/team.html
+++ b/team.html
@@ -141,9 +141,9 @@
                                 <div class="card-body">
                                     <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <h3 class="text-primary">test</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
