--- a/team.html
+++ b/team.html
@@ -135,26 +135,26 @@
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
-
+                        <!--
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">test</h3>
+                                        <h3 class="text-primary">First Last</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
-                                    <!-- <div class="border-top">
+                                     <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
+                        -->
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
