Updated recruter info on Eboard page

--- a/team.html
+++ b/team.html
@@ -253,8 +253,8 @@
                                         <h3 class="text-primary">Akhil Tatineni</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Spring 2023</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
