Updated all apply links

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -119,16 +119,16 @@
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
                                 <!--
-                                <p class="lead text-white">Applications for the 2020 program are not yet open.</p>
+                                <p class="lead text-white">Applications for the 2021 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
-                                <p class="lead text-white">Applications for the 2020 program are now closed.</p>
+                                <p class="lead text-white">Applications for the 2021 program are now open.</p>
                                 <p class="lead text-white">Updated program information due to new regulations can be found by clicking the button below.</p>
 
 
                                 <div class="btn-toolbar mt-5" role="group">
                                     <div class="btn-wrapper">
-                                        <a href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
+                                        <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
                                             <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                             <span class="btn-inner--text">Apply Now</span>
                                         </a>
@@ -228,9 +228,9 @@
                                 </ul>
                             </div>
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
-                                <p class="description2">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $250) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
+                                <p class="description2">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. The program costs will be at max $200 but likely will be less, as it includes early move in costs, all meals, and a t-shirt at the end of the program. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
+                                    <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -304,7 +304,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2020
+                        &copy; 2021
                         Leadership Advantage.
                     </div>
                 </div>
