--- a/team.html
+++ b/team.html
@@ -218,7 +218,7 @@
                                     <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Tommy Erickson</h3>
-                                        <div class="h6"><i class="fas fa-user-tag"></i><span class="emphasized">He/Him/His</span></div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
