added new member card and added pronouns as a test run

--- a/team.html
+++ b/team.html
@@ -135,16 +135,16 @@
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
-                        <!--
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
                                     <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">First Last</h3>
+                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
@@ -154,7 +154,6 @@
                                 </div>
                             </div>
                         </div>
-                        -->
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
@@ -218,7 +217,7 @@
                                     <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Tommy Erickson</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>He/Him/His</div>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
